# C_OO

./: .gitignore  CMakeLists.txt  README.md  config.c  util.c  util.h
.github/workflows/: cmake.yml
collection/: list.c  list.h
include/: test_util.h
include/collection/: list.h  map.h
lib/: CMakeLists.txt
lib/collection/: map.c
src/: test_util.c
src/collection/: list.c
test/: CMakeLists.txt  collection-test.c  list.c  test-util.c  test-util.h
test/collection/: list.c  map.c
